[gd_scene load_steps=7 format=3 uid="uid://ue4i1mov73r1"]

[ext_resource type="Texture2D" uid="uid://cspv16jlpb5b7" path="res://textures/Clouds/Clouds 4/1.png" id="1_41lfx"]
[ext_resource type="Script" path="res://scenes/menu.gd" id="1_unchw"]
[ext_resource type="Texture2D" uid="uid://qui7474x8217" path="res://textures/Clouds/Clouds 4/2.png" id="2_nnor3"]
[ext_resource type="Texture2D" uid="uid://do4xkojmnpmas" path="res://textures/Clouds/Clouds 4/3.png" id="3_iaa0r"]
[ext_resource type="Texture2D" uid="uid://b2ok5jpo1vbnv" path="res://textures/Clouds/Clouds 4/4.png" id="4_1pja2"]
[ext_resource type="FontVariation" uid="uid://b0pu4t5gnbt3w" path="res://assets/fonts/dpcomic.tres" id="5_emajt"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_unchw")

[node name="BackgroundSky" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.04, 1.04)
texture = ExtResource("1_41lfx")

[node name="Stars" type="TextureRect" parent="BackgroundSky"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nnor3")

[node name="Clouds1" type="TextureRect" parent="BackgroundSky"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_iaa0r")

[node name="Clouds2" type="TextureRect" parent="BackgroundSky"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.609756
offset_bottom = 0.609741
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_1pja2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -50.5
offset_right = 31.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.686275, 0.0117647, 0.560784, 1)
theme_override_colors/icon_hover_color = Color(0.92549, 0, 0.74902, 1)
theme_override_fonts/font = ExtResource("5_emajt")
theme_override_font_sizes/font_size = 60
text = "Start"
flat = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.686275, 0.0117647, 0.560784, 1)
theme_override_colors/icon_hover_color = Color(0.92549, 0, 0.74902, 1)
theme_override_fonts/font = ExtResource("5_emajt")
theme_override_font_sizes/font_size = 60
text = "Quit"
flat = true

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.686275, 0.0117647, 0.560784, 1)
theme_override_colors/icon_hover_color = Color(0.92549, 0, 0.74902, 1)
theme_override_fonts/font = ExtResource("5_emajt")
theme_override_font_sizes/font_size = 60
text = "Credits"
flat = true

[connection signal="button_down" from="VBoxContainer/StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_button_down"]
[connection signal="button_down" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_button_down"]
